syntax = "proto3";

package telemetry.v1;

option csharp_namespace = "Ingestion.Protos";

import "google/protobuf/timestamp.proto";

message TelemetryReading {
  string device_id = 1;
  string site_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  double state_of_charge_percentage = 4;
  double battery_power_kw = 5;
  double usable_energy_remaining_k_wh = 6;
  bool is_online = 7;
  double battery_temperature_c = 8;
}
